<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="glide_download_option">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_download_option">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_option">Retrofit - Type-Safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_channel_name" translatable="true">LoadApp</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="select_file_toast">Please select the file to download</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name_title">File Name:</string>
    <string name="status_name_title">Status:</string>
    <string name="success_status">Success</string>
    <string name="ok">OK</string>
</resources>
